<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">


    <ImageView
        android:id="@+id/iv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:alpha="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_place"
        app:tint="@color/offWhite"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0.7"
        android:text="@string/country"
        android:textColor="@color/offWhite"
        app:layout_constraintBottom_toBottomOf="@+id/iv_country"
        app:layout_constraintStart_toEndOf="@+id/iv_country"
        app:layout_constraintTop_toTopOf="@+id/iv_country" />


    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="@color/zeroWhite"
        app:layout_constraintBottom_toBottomOf="@+id/tv_country_label"
        app:layout_constraintStart_toEndOf="@+id/tv_country_label"
        app:layout_constraintTop_toTopOf="@+id/tv_country_label"
        tools:text="Egypt" />


    <ImageView
        android:id="@+id/iv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:alpha="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_country"
        app:srcCompat="@drawable/outline_code"
        app:tint="@color/offWhite"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0.7"
        android:text="@string/code"
        android:textColor="@color/offWhite"
        app:layout_constraintBottom_toBottomOf="@+id/iv_code"
        app:layout_constraintStart_toEndOf="@+id/iv_code"
        app:layout_constraintTop_toTopOf="@+id/iv_code" />


    <TextView
        android:id="@+id/tv_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/zeroWhite"
        app:layout_constraintBottom_toBottomOf="@+id/tv_code_label"
        app:layout_constraintStart_toStartOf="@+id/tv_country"
        app:layout_constraintTop_toTopOf="@+id/tv_code_label"
        tools:text="EGP" />


    <ImageView
        android:id="@+id/iv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:alpha="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_code"
        app:srcCompat="@drawable/outline_money_custom"
        app:tint="@color/offWhite"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_currency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0.7"
        android:text="@string/currency"
        android:textColor="@color/offWhite"
        app:layout_constraintBottom_toBottomOf="@+id/iv_currency"
        app:layout_constraintStart_toEndOf="@+id/iv_currency"
        app:layout_constraintTop_toTopOf="@+id/iv_currency" />


    <TextView
        android:id="@+id/tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/zeroWhite"
        app:layout_constraintBottom_toBottomOf="@+id/tv_currency_label"
        app:layout_constraintStart_toStartOf="@+id/tv_code"
        app:layout_constraintTop_toTopOf="@+id/tv_currency_label"
        tools:text="Egyptian Pound" />


    <ImageView
        android:id="@+id/iv_exchange_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:alpha="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_currency"
        app:srcCompat="@drawable/outline_currency_exchange"
        app:tint="@color/offWhite"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_exchange_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:alpha="0.7"
        android:text="@string/rate_1"
        android:textColor="@color/offWhite"
        app:layout_constraintBottom_toBottomOf="@+id/iv_exchange_rate"
        app:layout_constraintStart_toEndOf="@+id/iv_exchange_rate"
        app:layout_constraintTop_toTopOf="@+id/iv_exchange_rate" />


    <TextView
        android:id="@+id/tv_exchange_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/zeroWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_exchange_rate_label"
        app:layout_constraintStart_toStartOf="@+id/tv_currency"
        app:layout_constraintTop_toTopOf="@+id/tv_exchange_rate_label"
        tools:text="30.89" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0.1"
        android:background="@color/offWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_exchange_rate"
        app:layout_constraintTop_toBottomOf="@+id/tv_exchange_rate" />

</androidx.constraintlayout.widget.ConstraintLayout>